fix: wrong color in footer bg

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   align-items: center;
-  background-color: $color-text;
+  background-color: $color-dark;
   display: flex;
   flex-direction: column;
   padding: $m-sm 0;
